syntax = "proto3";

package authservice;

service AuthService {
  rpc issueAPIKey(IssueAPIKeyRequest) returns (IssueAPIKeyResponse);
  rpc revokeAPIKey(RevokeAPIKeyRequest) returns (RevokeAPIKeyResponse);
  rpc createJWT(CreateJWTRequest) returns (CreateJWTResponse);
  rpc validateJWT(ValidateJWTRequest) returns (ValidateJWTResponse);
}

message IssueAPIKeyRequest {}
message IssueAPIKeyResponse {}

message RevokeAPIKeyRequest {}
message RevokeAPIKeyResponse {}

message CreateJWTRequest {}
message CreateJWTResponse {}

message ValidateJWTRequest {}
message ValidateJWTResponse {}
